k8s/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: vaultwarden
